MOJO-600, changed usage from manual URL creation, submitted by Peter Wyngaard
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/axistools-maven-plugin@3993 52ab4f32-60fc-0310-b215-8acea882cd1b